# AI-FTE

./: .env.example  .gitignore  Business_Goals.md  CLAUDE.md  Company_Handbook.md  Dashboard.md  README.md  pyproject.toml
.claude/hooks/: CLAUDE.md  hooks.md
.claude/settings/: CLAUDE.md  mcp.json  settings.json
.claude/skills/create-plan/: CLAUDE.md  SKILL.md
.claude/skills/draft-reply/: CLAUDE.md  SKILL.md
.claude/skills/gmail-triage/: CLAUDE.md  SKILL.md
.claude/skills/process-inbox/: CLAUDE.md  SKILL.md
.claude/skills/update-dashboard/: CLAUDE.md  SKILL.md
.obsidian/: workspace.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
Inbox/: FRESH_TASK_1771655176.md  Test note.md.md  test_file.txt
Needs_Action/: CLAUDE.md  FILE_polling_test_1771655325.md  FILE_polling_test_1771655325.txt
history/prompts/constitution/: 001-initial-constitution.constitution.prompt.md
scripts/: CLAUDE.md  main.py
scripts/orchestrator/: CLAUDE.md  orchestrator.py
scripts/watchers/: CLAUDE.md  base_watcher.py  filesystem_watcher.py  simple_file_watcher.py
